# nautonomous_mission_coordinator

./: CMakeLists.txt  README.md  package.xml
action/: Mission.action  MissionPlan.action
include/nautonomous_mission_coordinator/: mission_coordinator_node.h  mission_coordinator_server.h  mission_server.h  move_base_client.h
include/nautonomous_operation_action/: mission_server.h  move_base_action_client.h  operation_manager.h
launch/: action_client.launch  action_server_client_canals.launch  action_server_client_coenhaven.launch  mission_coordinator_client.launch  mission_coordinator_client_canals.launch  mission_coordinator_client_coenhaven.launch  mission_coordinator_server.launch
msg/: OperationPlan.msg
scripts/: mission_client.py  mission_coordinator_client.py
src/: MissionServer.cpp  MoveBaseActionClient.cpp  OperationManager.cpp  mission_coordinator_node.cpp  mission_coordinator_server.cpp  mission_server.cpp  move_base_action_client.cpp  move_base_client.cpp  operation_manager.cpp
