<?xml version="1.0"?>
<package>

  <name>nautonomous_mission_coordinator</name>
  <version>0.0.1</version>
  <description>The nautonomous_mission_coordinator package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>nautonomous_routing_msgs</build_depend>
  <build_depend>nautonomous_map_msgs</build_depend>
  <build_depend>nautonomous_mission_msgs</build_depend>
  <build_depend>nautonomous_routing_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>nautonomous_routing_msgs</run_depend>
  <run_depend>nautonomous_map_msgs</run_depend>
  <run_depend>nautonomous_mission_msgs</run_depend>
  <run_depend>nautonomous_routing_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslib</run_depend>

</package>
